--- a/css/style_m.css
+++ b/css/style_m.css
@@ -1,9 +1,6 @@
 @charset "utf-8";
 /*----- tablet 481~768px */
 
-body {
-    padding: 0 30px;
-}
 header > h1 {
     margin: 0 auto;
 }
@@ -63,8 +60,8 @@ h3 {
     display: none;
 }
 #project #contwrap_web .content .imgarea > a img {
-    width: 650px;
-    height: 349px;
+    width: 90%;
+    height: 100%;
 }
 #project #contwrap_web .content.right .imgarea {
     position: relative;
@@ -124,18 +121,23 @@ h3 {
 .swiper {
     width: 650px;
 }
-.swiper-slide .title {
-    width: 312px;
-}
 
-/* footer */
-footer .mail {
-    width: 37%;
-}
 
 /*----- mobile ~480px */
 @media screen and (max-width: 480px) {
 
+    #main .title .subtxt {
+        left: 0;
+        font-size: 36px;
+        margin-bottom: 10px;
+    }
+    #main .title .maintxt {
+        font-size: 36px;
+    }
+    #main .title .maintxt:before {
+        width: 85%;
+        bottom: -10px;
+    }
     #about {
         display: block;
         margin-bottom: 100px;
@@ -157,8 +159,8 @@ footer .mail {
     #about ul li > h1 {font-size: 20px;}
 
     #project #contwrap_web .content .imgarea > a img {
-        width: 380px;
-        height: 204px;
+        width: 100%;
+        height: 100%;
     }
     #project #contwrap_web .content .text {
         width: 100%;
@@ -196,14 +198,5 @@ footer .mail {
     .swiper {
         width: 100%;
     }
-    .swiper-slide .title {
-        width: 174px;
-    }
 
-    footer .mail {
-        display: flex;
-        margin: 0 auto 100px;
-        justify-content: space-between;
-        width: 60%;
-    }
 }
