0927 포트폴리오

--- a/css/style_m.css
+++ b/css/style_m.css
@@ -185,6 +185,7 @@ h3 {
         font-size: 16px;
     }
 
+    #project #contwrap_design {padding-top: 50px;}
 
     #project #contwrap_design > a img {
         width: 100%;
