--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ header {
     padding: 5px 20px;
     border-top: 2px solid #000;
     border-bottom: 1px solid #000;
-    background: rgba(255, 255, 255, 0.5);
+    background: rgba(255, 255, 255);
     position: fixed;
     width: 90%; height: 40px;
     z-index: 999;
@@ -486,7 +486,6 @@ h3:before {
 footer {
     background: #414141;
     width: 100%;
-    height: 70vh;
     margin-top: 130px;
     text-align: center;
     color: #fff;
